--- a/config/preprocess.yaml
+++ b/config/preprocess.yaml
@@ -1,8 +1,8 @@
 preprocess:
   input_files:
-    - names:
-        - scratch/final.csv
-      kind: csv
+#    - names:
+#        - scratch/final.csv
+#      kind: csv
     - names:
         - scratch/test_set_articles.ZIP
       kind: zip
